# MySimplePlayer

./: .gitignore  CMakeLists.txt  README.md
MyLazy/: MyLazy.cpp  MyLazy.h
MyPlayer/: CMakeLists.txt  MyCtrThread.cpp  MyCtrThread.h  MyDecoderThread.cpp  MyDecoderThread.h  MyEnum.h  MyPlayer.cpp  MyPlayer.h  MyReaderThread.cpp  MyReaderThread.h
MyQueue/: MyQueue.h
MyThread/: CMakeLists.txt  MyThread.cpp  MyThread.h
Test/: CMakeLists.txt  test.cpp
